# print-api

./: .gitignore  <  CHANGELOG.md  Makefile  README.md  action.yml  cabal.project  dump-decls.cabal  install-for-ghcup-compilers.sh  print-api.cabal
.github/workflows/: ci.yml  linting.yml  process-binaries.sh  release.yml  test-reports.yml
app/: Main.hs
app/print-api/: Main.hs
app/print-api-wrapper/: Main.hs
compat/9.10.1/GHC/: Compat.hs
compat/9.12.1/GHC/: Compat.hs
compat/9.12.2/GHC/: Compat.hs
compat/9.6.6/GHC/: Compat.hs
compat/9.8.2/GHC/: Compat.hs
compat/9.8.4/GHC/: Compat.hs
doc/: ARCHITECTURE.md  MANUAL.md
src/DumpDecls/: IgnoredDeclarations.hs
src/DumpDecls/CLI/: Types.hs
src/DumpDecls/CLI/Cmd/: Dump.hs
src/PrintApi/: IgnoredDeclarations.hs  Utils.hs
src/PrintApi/CLI/: Types.hs
src/PrintApi/CLI/Cmd/: Dump.hs
test/: IgnoreList.hs  Main.hs  Utils.hs
test/golden/: servant-client-actual-api.txt  servant-client-expected-api.txt  servant-client-ignore-list.txt  vector-expected-api.txt  vector-ignore-list.txt
