cabal-version:      2.4
name:               dump-decls
version:            0.1.0.0
synopsis:           Dump the declarations of a package.
license:            BSD-3-Clause
author:             Ben Gamari
maintainer:         ben@smart-cactus.org
copyright:          (c) 2023 Ben Gamari
extra-source-files:
  compat/9.10.1/GHC/Compat.hs
  compat/9.6.5/GHC/Compat.hs

tested-with:        GHC ==9.6.6 || ==9.10.1

common extensions
  default-extensions:
    DataKinds
    DeriveAnyClass
    DerivingVia
    DuplicateRecordFields
    LambdaCase
    NoStarIsType
    OverloadedRecordDot
    OverloadedStrings
    PackageImports
    RecordWildCards
    StrictData
    TypeFamilies

  default-language:   GHC2021

common ghc-options
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -fhide-source-paths -Wno-unused-do-bind -fshow-hole-constraints
    -Wno-unticked-promoted-constructors -finfo-table-map

common rts-options
  ghc-options: -rtsopts -threaded "-with-rtsopts=-N -T"

library
  import:          extensions
  import:          ghc-options
  hs-source-dirs:  src

  if impl(ghc ==9.10.1)
    hs-source-dirs: compat/9.10.1

  if impl(ghc ==9.6.6)
    hs-source-dirs: compat/9.6.6

  other-modules:   Paths_dump_decls
  autogen-modules: Paths_dump_decls

  -- cabal-fmt: expand src/
  exposed-modules:
    DumpDecls.CLI.Cmd.Dump
    DumpDecls.CLI.Types
    DumpDecls.IgnoredDeclarations
    GHC.Compat

  build-depends:
    , base
    , ghc
    , ghc-paths
    , optparse-applicative
    , text

executable dump-decls
  import:           extensions
  import:           ghc-options
  import:           rts-options
  hs-source-dirs:   app
  main-is:          Main.hs
  build-depends:
    , base
    , dump-decls
    , ghc
    , ghc-paths
    , optparse-applicative

  default-language: Haskell2010
