cabal-version:      2.4
name:               print-api
version:            0.1.0.1
synopsis:           Print the API of a package.
license:            BSD-3-Clause
author:             Ben Gamari, Hécate Kleidukos
maintainer:         hecate+github@glitchbra.in
copyright:          © 2023 Ben Gamari, 2024 Hécate Kleidukos
extra-source-files:
  compat/9.10.1/GHC/Compat.hs
  compat/9.6.6/GHC/Compat.hs
  compat/9.8.2/GHC/Compat.hs

tested-with:        GHC ==9.6.6 || ==9.8.2 || ==9.10.1

common extensions
  default-extensions:
    DataKinds
    DeriveAnyClass
    DerivingVia
    DuplicateRecordFields
    LambdaCase
    NoStarIsType
    OverloadedRecordDot
    OverloadedStrings
    PackageImports
    RecordWildCards
    StrictData
    TypeFamilies

  default-language:   GHC2021

common ghc-options
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -fhide-source-paths -Wno-unused-do-bind -fshow-hole-constraints
    -Wno-unticked-promoted-constructors -finfo-table-map

common rts-options
  ghc-options: -rtsopts -threaded "-with-rtsopts=-N -T"

library
  import:          extensions
  import:          ghc-options
  hs-source-dirs:  src

  if impl(ghc ==9.10.1)
    hs-source-dirs: compat/9.10.1

  if impl(ghc ==9.8.2)
    hs-source-dirs: compat/9.8.2

  if impl(ghc ==9.6.6)
    hs-source-dirs: compat/9.6.6

  other-modules:   Paths_print_api
  autogen-modules: Paths_print_api

  -- cabal-fmt: expand src/
  exposed-modules:
    GHC.Compat
    PrintApi.CLI.Cmd.Dump
    PrintApi.CLI.Types
    PrintApi.IgnoredDeclarations

  build-depends:
    , base
    , bytestring
    , extra
    , ghc
    , ghc-boot
    , ghc-paths
    , optparse-applicative
    , text
    , typed-process

executable print-api
  import:           extensions
  import:           ghc-options
  import:           rts-options
  hs-source-dirs:   app
  main-is:          Main.hs
  build-depends:
    , base
    , ghc
    , ghc-paths
    , optparse-applicative
    , print-api

  default-language: Haskell2010
