cabal-version:      2.4
name:               print-api
-- For the purpose of release and pre-release versioning, we use the following scheme:
-- EPOCH.MAJOR.MINOR.PATCH
-- with the MINOR member being even for releases and odd for pre-releases
version:            0.1.1.0
synopsis:           Print the API of a package.
license:            BSD-3-Clause
author:             Ben Gamari, Hécate Kleidukos
maintainer:         hecate+github@glitchbra.in
copyright:          © 2023 Ben Gamari, 2024 Hécate Kleidukos
extra-source-files:
  compat/9.10.1/GHC/Compat.hs
  compat/9.6.6/GHC/Compat.hs
  compat/9.8.2/GHC/Compat.hs

tested-with:        GHC ==9.6.6 || ==9.8.2 || ==9.10.1

common extensions
  default-extensions:
    DataKinds
    DeriveAnyClass
    DerivingVia
    DuplicateRecordFields
    LambdaCase
    NoStarIsType
    OverloadedRecordDot
    OverloadedStrings
    PackageImports
    RecordWildCards
    StrictData
    TypeFamilies

  default-language:   GHC2021

common ghc-options
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -fhide-source-paths -Wno-unused-do-bind -fshow-hole-constraints
    -Wno-unticked-promoted-constructors -finfo-table-map

common rts-options
  ghc-options: -rtsopts -threaded "-with-rtsopts=-N -T"

common print-api-common
  import:           extensions
  import:           ghc-options
  import:           rts-options
  hs-source-dirs:   app/print-api

  -- For some mysterious reason Cabal doesn't like it when there is no `main-is` in the executable section;
  -- Importing it doesn't work.
  -- main-is:          Main.hs
  build-depends:
    , base
    , ghc
    , ghc-paths
    , optparse-applicative
    , print-api

  default-language: Haskell2010

library
  import:          extensions
  import:          ghc-options
  hs-source-dirs:  src

  if impl(ghc ==9.10.1)
    hs-source-dirs: compat/9.10.1

  if impl(ghc ==9.8.2)
    hs-source-dirs: compat/9.8.2

  if impl(ghc ==9.6.6)
    hs-source-dirs: compat/9.6.6

  other-modules:   Paths_print_api
  autogen-modules: Paths_print_api

  -- cabal-fmt: expand src/
  exposed-modules:
    GHC.Compat
    PrintApi.CLI.Cmd.Dump
    PrintApi.CLI.Types
    PrintApi.IgnoredDeclarations
    PrintApi.Utils

  build-depends:
    , base
    , bytestring
    , extra
    , filepath
    , ghc
    , ghc-boot
    , ghc-paths
    , optparse-applicative
    , process
    , text
    , typed-process

executable print-api
  import:           extensions
  import:           ghc-options
  import:           rts-options
  hs-source-dirs:   app/print-api-wrapper
  main-is:          Main.hs
  build-depends:
    , base
    , bytestring
    , optparse-applicative
    , print-api

  default-language: GHC2021

executable print-api-9.6.6
  import:  print-api-common
  main-is: Main.hs

  if impl(ghc ==9.6.6)
    buildable: True

  else
    buildable: False

executable print-api-9.8.2
  import:  print-api-common
  main-is: Main.hs

  if impl(ghc ==9.8.2)
    buildable: True

  else
    buildable: False

executable print-api-9.10.1
  import:  print-api-common
  main-is: Main.hs

  if impl(ghc ==9.10.1)
    buildable: True

  else
    buildable: False

test-suite print-api-test
  import:         extensions
  import:         ghc-options
  import:         rts-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs
  other-modules:
    IgnoreList
    Utils

  build-depends:
    , base
    , bytestring
    , directory
    , extra
    , filepath
    , ghc
    , print-api
    , tasty
    , tasty-coverage
    , tasty-golden
    , tasty-hunit
    , tasty-test-reporter
    , typed-process
